<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewSupporterForBackground"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/layoutPlayer"
        app:layout_constraintStart_toStartOf="@id/layoutPlayer"
        app:layout_constraintTop_toTopOf="@id/layoutPlayer"/>

    <View
        android:id="@+id/viewSupporterForArtAlbum"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/viewSupporterForArtAlbum"
        app:layout_constraintEnd_toStartOf="@id/viewSupporterForArtAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/viewSupporterForBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageAlbumArt"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:scaleType="center"
        android:src="@drawable/artist"
        app:layout_constraintBottom_toBottomOf="@id/viewSupporterForArtAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewSupporterForArtAlbum"
        app:riv_corner_radius="12dp"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/nabeel"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageAlbumArt"/>

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nabeel_akbar"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textTitle"/>


    <TextView
        android:id="@+id/textNowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/now_playing"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        android:rotation="-90"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="@id/textNowPlaying"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textNowPlaying"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/textNowPlaying"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textNowPlaying"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textLyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/lyrics"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/imageLyrics"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_up"
            app:layout_constraintBottom_toTopOf="@id/textLyrics"
            app:tint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/buttonPlay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_background"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toTopOf="@id/imageLyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonPrevious"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/next_previous_button_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_pre"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
            app:layout_constraintEnd_toStartOf="@id/buttonPlay"
            app:layout_constraintTop_toTopOf="@id/buttonPlay" />


        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/next_previous_button_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
            app:layout_constraintStart_toEndOf="@id/buttonPlay"
            app:layout_constraintTop_toTopOf="@id/buttonPlay" />


        <ImageButton
            android:id="@+id/buttonShuffle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_shuffle"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonPlay" />


        <ImageButton
            android:id="@+id/buttonRepeat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_repeat"
            app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonPlay" />

        <SeekBar
            android:id="@+id/playerSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:progress="30"
            android:theme="@style/SeekBarTheme"
            app:layout_constraintBottom_toTopOf="@id/buttonPlay"/>

        <TextView
            android:id="@+id/textCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_1_37"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
            app:layout_constraintStart_toStartOf="@id/playerSeekBar"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_4_14"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
            app:layout_constraintEnd_toEndOf="@id/playerSeekBar"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>